{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 34,
  "lineage": "f10f56dc-1f7b-6e2e-6f7d-bba50b29bfc2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ngw-eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05cfd98b2217badb1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-166-11-72.compute-1.amazonaws.com",
            "public_ip": "54.166.11.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "created_by": "john",
              "environment": "test"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01a978d952bf92afa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-224-42-79.compute-1.amazonaws.com",
            "public_ip": "3.224.42.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "created_by": "john",
              "environment": "test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_vpc_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:internet-gateway/igw-0ca7330febab2607a",
            "id": "igw-0ca7330febab2607a",
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cfd98b2217badb1",
            "id": "nat-03fc3f61f2add46da",
            "network_interface_id": "eni-02920093e7796907a",
            "private_ip": "10.0.0.117",
            "public_ip": "54.166.11.72",
            "subnet_id": "subnet-02634c37aa99fd3bd",
            "tags": {
              "Name": "test-ngw-0",
              "created_by": "john",
              "environment": "test"
            }
          },
          "dependencies": [
            "aws_eip.nat-ngw-eip",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a978d952bf92afa",
            "id": "nat-079f571dec44f22f2",
            "network_interface_id": "eni-006ab81d60ef7182d",
            "private_ip": "10.0.4.217",
            "public_ip": "3.224.42.79",
            "subnet_id": "subnet-0bf32f2e2eab1bf52",
            "tags": {
              "Name": "test-ngw-1",
              "created_by": "john",
              "environment": "test"
            }
          },
          "dependencies": [
            "aws_eip.nat-ngw-eip",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_backend_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-043dec1316fa870e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03fc3f61f2add46da",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-043dec1316fa870e8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat-ngw-eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.eks",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09f0d72ed491fea571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-079f571dec44f22f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f0d72ed491fea57",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat-ngw-eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.eks",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_to_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca7330febab2607a",
            "id": "r-rtb-07144ddba26a225e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07144ddba26a225e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.app_vpc_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-043dec1316fa870e8",
            "owner_id": "535518648590",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-rt-eks-us-east-1a"
            },
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09f0d72ed491fea57",
            "owner_id": "535518648590",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-rt-eks-us-east-1b"
            },
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07144ddba26a225e3",
            "owner_id": "535518648590",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-rt-public"
            },
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aee0614253e10436",
            "route_table_id": "rtb-043dec1316fa870e8",
            "subnet_id": "subnet-0d810e6c762285ffc"
          },
          "dependencies": [
            "aws_route_table.eks",
            "aws_subnet.eks_internal_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03af2ab8caf8b1a94",
            "route_table_id": "rtb-09f0d72ed491fea57",
            "subnet_id": "subnet-021bef4d335ad7538"
          },
          "dependencies": [
            "aws_route_table.eks",
            "aws_subnet.eks_internal_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057a7857cb32b5654",
            "route_table_id": "rtb-07144ddba26a225e3",
            "subnet_id": "subnet-02634c37aa99fd3bd"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6bbc5e9efac4334",
            "route_table_id": "rtb-07144ddba26a225e3",
            "subnet_id": "subnet-0bf32f2e2eab1bf52"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:security-group/sg-070fa9fec397953a0",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-070fa9fec397953a0",
            "ingress": [],
            "name": "john20201107070744504900000007",
            "name_prefix": "john",
            "owner_id": "535518648590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "john-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:security-group/sg-0b1140f4f575f7c15",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0b1140f4f575f7c15",
            "ingress": [],
            "name": "john20201107070744505100000008",
            "name_prefix": "john",
            "owner_id": "535518648590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "john-eks_worker_sg",
              "kubernetes.io/cluster/john": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2067434904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-070fa9fec397953a0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2185518221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-070fa9fec397953a0",
            "self": false,
            "source_security_group_id": "sg-0b1140f4f575f7c15",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_primary_ingress_workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3305563885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b1140f4f575f7c15",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-968890525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b1140f4f575f7c15",
            "self": false,
            "source_security_group_id": "sg-070fa9fec397953a0",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3772959171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b1140f4f575f7c15",
            "self": false,
            "source_security_group_id": "sg-070fa9fec397953a0",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_primary",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3956946778",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b1140f4f575f7c15",
            "self": false,
            "source_security_group_id": "sg-0b1140f4f575f7c15",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_internal_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-0d810e6c762285ffc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.28.0/22",
            "id": "subnet-0d810e6c762285ffc",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-internal-subnet-us-east-1a",
              "kubernetes.io/cluster/john": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-021bef4d335ad7538",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/22",
            "id": "subnet-021bef4d335ad7538",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-internal-subnet-us-east-1b",
              "kubernetes.io/cluster/john": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-02634c37aa99fd3bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/22",
            "id": "subnet-02634c37aa99fd3bd",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-public-subnet-us-east-1a",
              "kubernetes.io/cluster/john": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-0bf32f2e2eab1bf52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/22",
            "id": "subnet-0bf32f2e2eab1bf52",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-public-subnet-us-east-1b",
              "kubernetes.io/cluster/john": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b200e93c39d8a121"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:vpc/vpc-0b200e93c39d8a121",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e4fdf20798c25ff0",
            "default_route_table_id": "rtb-0465455ad375f5a93",
            "default_security_group_id": "sg-029b14f73cca24314",
            "dhcp_options_id": "dopt-bbec06de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b200e93c39d8a121",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0465455ad375f5a93",
            "owner_id": "535518648590",
            "tags": {
              "Name": "test-vpc",
              "created_by": "john",
              "environment": "test",
              "kubernetes.io/cluster/john": "shared"
            }
          }
        }
      ]
    }
  ]
}